# plasma-bubble-paper

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  conftest.py  download_inputs.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  web.yml
INPUT/: GFZ0MGXRAP_20230490000_01D_05M_ORB.SP3
data/: case_study_validation_v3.json
docker/: compose.yml
docs/: case_study_validation_v2.json  plan-phase2-storms-and-external-labels.md  results-phase2a.md  results-storms-v3.md  storms-v3-cycle-stratified.json  storms-v3-stats-sens.json
models/: registry.json
notebooks/: colab_ramp.ipynb
paper/figures/: manifest.json
paper/scripts/: _storms_v3_io.py  _style.py  make_fig02_event.py  make_fig10_storm_vs_quiet.py  make_fig11_superposed_epoch.py  make_fig12_storm_vs_quiet_v3.py  make_fig13_storm_lt_polar.py  make_fig14_intensity_curve.py  make_fig15_solar_cycle_strip.py  make_fig16_recovery_duration.py  make_fig17_precursor.py  make_fig18_cycle_modulation.py  make_fig19_station_lag.py  make_results_storms_v3.py
pyOASIS/: DTEC_CALC.py  RNX_CLEAN.py  RNX_LEVELLING.py  ROTI_CALC.py  SIDX_CALC.py  SP3_INTERPOLATE.py  TEC_CAL.py  __init__.py  gnss_freqs.py  levelling_settings.py  linear_combinations.py  screening_settings.py  settings.py
scripts/: profile_one_job.py
services/api/app/: main.py
src/epb_detector/: __init__.py  config.py
src/epb_detector/analysis/: __init__.py  storms_v3.py
src/epb_detector/catalog/: __init__.py  day_selector.py  stations.py  stations_rbmc.yaml
src/epb_detector/cli/: __init__.py  __main__.py
src/epb_detector/dataset/: card.py  snapshot.py
src/epb_detector/features/: geometric.py  pipeline.py  statistics.py  windows.py
src/epb_detector/geo/: coords.py  magnetic.py
src/epb_detector/inference/: __init__.py  events.py
src/epb_detector/ingest/: cache.py  downloader.py  orchestrator.py  rinex_filter.py  runner.py
src/epb_detector/io/: readers.py  schema.py
src/epb_detector/labels/: __init__.py  v2_external.py  weak.py
src/epb_detector/models/: metrics.py  registry.py  xgb.py  (+1 more)
tests/: conftest.py
tests/api/: test_routes.py
tests/unit/: test_catalog_and_geo.py  test_features.py  test_labels.py  test_readers.py  test_rinex_filter.py  test_runner_skip.py  test_sp3_filter.py  test_splits_and_metrics.py  test_storms.py
web/: .gitignore  Dockerfile  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: DatasetStats.tsx  DstTrace.tsx  EventDetail.tsx  FeatureHistogram.tsx  IngestProgress.tsx  MapDeck.tsx  Nav.tsx  PhaseBars.tsx  SolarCycleStrip.tsx  StormCatalog.tsx  StormDrawer.tsx  StormTimeline.tsx  SuperposedEpoch.tsx
web/lib/: api.ts  colors.ts
(+35 files in other folders)
