[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epb-detector"
version = "0.1.0"
description = "Equatorial Plasma Bubble detection/classification on top of pyOASIS"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Plasma Bubble Paper Authors" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15",
    "duckdb>=1.0",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "matplotlib>=3.8",
    "pyproj>=3.6",
    "georinex>=1.16",
    "astropy>=6.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "pyyaml>=6.0",
    "shap>=0.45",
    "pandera>=0.20",
    "aacgmv2>=2.7; platform_system != 'Windows'",
    "rich>=13.7",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML",
]
paper = [
    "scienceplots>=2.1",
    "seaborn>=0.13",
]

[project.scripts]
epb = "epb_detector.cli.__main__:app"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["epb_detector*", "pyOASIS*"]

[tool.setuptools.package-data]
epb_detector = ["catalog/*.yaml", "external/*.yaml", "py.typed"]
pyOASIS = ["glonass_channels.dat"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = [
    "E501",     # line length — trust the formatter
    "B008",     # FastAPI / Typer use `param = Query(...)` defaults idiomatically
    "N806",     # Allow uppercase `X` for ML feature matrices
    "RUF001",   # Unicode mathematical chars (×, –, ∪) intentional in docstrings
    "RUF002",
    "RUF003",
    "SIM108",   # Allow if/else where it reads better than a ternary
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "N802", "N806", "F841"]
"paper/scripts/**" = ["E402", "N802", "N806"]
"services/api/**" = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src/epb_detector"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-q", "--strict-markers", "--strict-config"]
markers = [
    "integration: end-to-end tests that hit pyOASIS or real data",
    "slow: tests that take more than a few seconds",
]

[tool.coverage.run]
source = ["src/epb_detector"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
